test/good/2.cc
int add(int x, int y)
{
    return x + y;
}

int main()
{
    int x, y, z;
    x = 4;
    y = 5;
    z = 6;
    x = add(y, z);
}