test/bad/10.cc
#include <string>

using std::string;

string hello(int x, string x)
{
    return x;
}

int main()
{
    return 0;
}
